create or update post base on issue: 15